parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> final
Rule 1     final -> reconhece
Rule 2     reconhece -> tipos
Rule 3     reconhece -> declara
Rule 4     reconhece -> ciclos
Rule 5     reconhece -> print
Rule 6     reconhece -> scan
Rule 7     reconhece -> devolve
Rule 8     reconhece -> atribuicao
Rule 9     reconhece -> tipos reconhece
Rule 10    reconhece -> declara reconhece
Rule 11    reconhece -> ciclos reconhece
Rule 12    reconhece -> print reconhece
Rule 13    reconhece -> scan reconhece
Rule 14    reconhece -> atribuicao reconhece
Rule 15    expression -> expression MULTIPLICACAO term
Rule 16    expression -> expression MULTIPLICACAO ID
Rule 17    expression -> expression DIVISAO term
Rule 18    expression -> expression DIVISAO ID
Rule 19    expression -> expression SOMA ID
Rule 20    expression -> expression SOMA term
Rule 21    expression -> expression SUBTRACAO term
Rule 22    expression -> expression SUBTRACAO ID
Rule 23    expression -> NUM MOD NUM
Rule 24    expression -> ID MOD NUM
Rule 25    expression -> NUM MOD ID
Rule 26    expression -> ID MOD ID
Rule 27    factor -> NUM
Rule 28    factor -> REAL
Rule 29    term -> factor
Rule 30    expression -> term
Rule 31    expression -> ID
Rule 32    els -> comparacoes
Rule 33    els -> term
Rule 34    els -> ID
Rule 35    els -> BOOL
Rule 36    atribuicao -> ID PRE NUM PRD IGUAL expression
Rule 37    atribuicao -> ID PRE ID PRD IGUAL expression
Rule 38    atribuicao -> ID IGUAL ID PRE ID PRD
Rule 39    atribuicao -> ID IGUAL ID PRE NUM PRD
Rule 40    declara -> ARRAY PRE NUM PRD ID
Rule 41    declara -> DCLN ID IGUAL expression
Rule 42    declara -> DCLN ID
Rule 43    declara -> DCLS ID
Rule 44    declara -> DCLS ID IGUAL ASPAS ID ASPAS
Rule 45    conjuncao -> els CONJUNCAO els
Rule 46    conjuncao -> els CONJUNCAO aux
Rule 47    disjuncao -> els DISJUNCAO els
Rule 48    disjuncao -> els DISJUNCAO aux
Rule 49    aux -> conjuncao
Rule 50    aux -> disjuncao
Rule 51    comparacoes -> expression IGUAL IGUAL expression
Rule 52    comparacoes -> aux IGUAL IGUAL aux
Rule 53    comparacoes -> aux MAIOR aux
Rule 54    comparacoes -> aux MENOR aux
Rule 55    comparacoes -> expression MAIOR expression
Rule 56    comparacoes -> expression MENOR expression
Rule 57    comparacoes -> term MAIOR term
Rule 58    comparacoes -> term MENOR term
Rule 59    comparacoes -> term IGUAL IGUAL term
Rule 60    comparacoes -> aux MAIOR IGUAL aux
Rule 61    comparacoes -> aux MENOR IGUAL aux
Rule 62    comparacoes -> expression MAIOR IGUAL expression
Rule 63    comparacoes -> expression MENOR IGUAL expression
Rule 64    comparacoes -> term MAIOR IGUAL term
Rule 65    comparacoes -> term MENOR IGUAL term
Rule 66    tipos -> aux
Rule 67    tipos -> expression
Rule 68    tipos -> comparacoes
Rule 69    tipos -> print
Rule 70    tipos -> devolve
Rule 71    tipos -> scan
Rule 72    tipos -> declara
Rule 73    statements -> stat
Rule 74    statements -> stat statements
Rule 75    stat -> atribuicao
Rule 76    stat -> tipos
Rule 77    stat -> ciclos
Rule 78    stat -> <empty>
Rule 79    atribuicao -> ID IGUAL expression
Rule 80    if -> IF tipos DOISPONTOS LPAREN statements RPAREN ELSE LPAREN statements RPAREN
Rule 81    if -> IF tipos DOISPONTOS LPAREN statements RPAREN
Rule 82    sinal -> SOMA
Rule 83    sinal -> SUBTRACAO
Rule 84    sinal -> MULTIPLICACAO
Rule 85    sinal -> DIVISAO
Rule 86    for -> FOR ID UNTIL comparacoes VIRG sinal NUM DOISPONTOS LPAREN statements RPAREN
Rule 87    while -> WHILE tipos DOISPONTOS LPAREN statements RPAREN
Rule 88    ciclos -> if
Rule 89    ciclos -> for
Rule 90    ciclos -> while
Rule 91    print -> PRINT LPAREN ID RPAREN
Rule 92    print -> PRINT LPAREN ASPAS ID ASPAS RPAREN
Rule 93    print -> PRINT LPAREN ASPAS term ASPAS RPAREN
Rule 94    print -> PRINT LPAREN ASPAS ID ASPAS VIRG expression RPAREN
Rule 95    print -> PRINT LPAREN expression RPAREN
Rule 96    print -> PRINT LPAREN VIRG RPAREN
Rule 97    scan -> SCAN LPAREN ID RPAREN
Rule 98    devolve -> RETURN LPAREN expression RPAREN

Terminals, with rules where they appear

ARRAY                : 40
ASPAS                : 44 44 92 92 93 93 94 94
BOOL                 : 35
CONJUNCAO            : 45 46
DCLN                 : 41 42
DCLS                 : 43 44
DISJUNCAO            : 47 48
DIVISAO              : 17 18 85
DOISPONTOS           : 80 81 86 87
ELSE                 : 80
FOR                  : 86
ID                   : 16 18 19 22 24 25 26 26 31 34 36 37 37 38 38 38 39 39 40 41 42 43 44 44 79 86 91 92 94 97
IF                   : 80 81
IGUAL                : 36 37 38 39 41 44 51 51 52 52 59 59 60 61 62 63 64 65 79
LPAREN               : 80 80 81 86 87 91 92 93 94 95 96 97 98
MAIOR                : 53 55 57 60 62 64
MENOR                : 54 56 58 61 63 65
MOD                  : 23 24 25 26
MULTIPLICACAO        : 15 16 84
NUM                  : 23 23 24 25 27 36 39 40 86
PRD                  : 36 37 38 39 40
PRE                  : 36 37 38 39 40
PRINT                : 91 92 93 94 95 96
REAL                 : 28
RETURN               : 98
RPAREN               : 80 80 81 86 87 91 92 93 94 95 96 97 98
SCAN                 : 97
SOMA                 : 19 20 82
SUBTRACAO            : 21 22 83
UNTIL                : 86
VIRG                 : 86 94 96
WHILE                : 87
error                : 

Nonterminals, with rules where they appear

atribuicao           : 8 14 75
aux                  : 46 48 52 52 53 53 54 54 60 60 61 61 66
ciclos               : 4 11 77
comparacoes          : 32 68 86
conjuncao            : 49
declara              : 3 10 72
devolve              : 7 70
disjuncao            : 50
els                  : 45 45 46 47 47 48
expression           : 15 16 17 18 19 20 21 22 36 37 41 51 51 55 55 56 56 62 62 63 63 67 79 94 95 98
factor               : 29
final                : 0
for                  : 89
if                   : 88
print                : 5 12 69
reconhece            : 1 9 10 11 12 13 14
scan                 : 6 13 71
sinal                : 86
stat                 : 73 74
statements           : 74 80 80 81 86 87
term                 : 15 17 20 21 30 33 57 57 58 58 59 59 64 64 65 65 93
tipos                : 2 9 76 80 81 87
while                : 90

Parsing method: LALR

state 0

    (0) S' -> . final
    (1) final -> . reconhece
    (2) reconhece -> . tipos
    (3) reconhece -> . declara
    (4) reconhece -> . ciclos
    (5) reconhece -> . print
    (6) reconhece -> . scan
    (7) reconhece -> . devolve
    (8) reconhece -> . atribuicao
    (9) reconhece -> . tipos reconhece
    (10) reconhece -> . declara reconhece
    (11) reconhece -> . ciclos reconhece
    (12) reconhece -> . print reconhece
    (13) reconhece -> . scan reconhece
    (14) reconhece -> . atribuicao reconhece
    (66) tipos -> . aux
    (67) tipos -> . expression
    (68) tipos -> . comparacoes
    (69) tipos -> . print
    (70) tipos -> . devolve
    (71) tipos -> . scan
    (72) tipos -> . declara
    (40) declara -> . ARRAY PRE NUM PRD ID
    (41) declara -> . DCLN ID IGUAL expression
    (42) declara -> . DCLN ID
    (43) declara -> . DCLS ID
    (44) declara -> . DCLS ID IGUAL ASPAS ID ASPAS
    (88) ciclos -> . if
    (89) ciclos -> . for
    (90) ciclos -> . while
    (91) print -> . PRINT LPAREN ID RPAREN
    (92) print -> . PRINT LPAREN ASPAS ID ASPAS RPAREN
    (93) print -> . PRINT LPAREN ASPAS term ASPAS RPAREN
    (94) print -> . PRINT LPAREN ASPAS ID ASPAS VIRG expression RPAREN
    (95) print -> . PRINT LPAREN expression RPAREN
    (96) print -> . PRINT LPAREN VIRG RPAREN
    (97) scan -> . SCAN LPAREN ID RPAREN
    (98) devolve -> . RETURN LPAREN expression RPAREN
    (36) atribuicao -> . ID PRE NUM PRD IGUAL expression
    (37) atribuicao -> . ID PRE ID PRD IGUAL expression
    (38) atribuicao -> . ID IGUAL ID PRE ID PRD
    (39) atribuicao -> . ID IGUAL ID PRE NUM PRD
    (79) atribuicao -> . ID IGUAL expression
    (49) aux -> . conjuncao
    (50) aux -> . disjuncao
    (15) expression -> . expression MULTIPLICACAO term
    (16) expression -> . expression MULTIPLICACAO ID
    (17) expression -> . expression DIVISAO term
    (18) expression -> . expression DIVISAO ID
    (19) expression -> . expression SOMA ID
    (20) expression -> . expression SOMA term
    (21) expression -> . expression SUBTRACAO term
    (22) expression -> . expression SUBTRACAO ID
    (23) expression -> . NUM MOD NUM
    (24) expression -> . ID MOD NUM
    (25) expression -> . NUM MOD ID
    (26) expression -> . ID MOD ID
    (30) expression -> . term
    (31) expression -> . ID
    (51) comparacoes -> . expression IGUAL IGUAL expression
    (52) comparacoes -> . aux IGUAL IGUAL aux
    (53) comparacoes -> . aux MAIOR aux
    (54) comparacoes -> . aux MENOR aux
    (55) comparacoes -> . expression MAIOR expression
    (56) comparacoes -> . expression MENOR expression
    (57) comparacoes -> . term MAIOR term
    (58) comparacoes -> . term MENOR term
    (59) comparacoes -> . term IGUAL IGUAL term
    (60) comparacoes -> . aux MAIOR IGUAL aux
    (61) comparacoes -> . aux MENOR IGUAL aux
    (62) comparacoes -> . expression MAIOR IGUAL expression
    (63) comparacoes -> . expression MENOR IGUAL expression
    (64) comparacoes -> . term MAIOR IGUAL term
    (65) comparacoes -> . term MENOR IGUAL term
    (80) if -> . IF tipos DOISPONTOS LPAREN statements RPAREN ELSE LPAREN statements RPAREN
    (81) if -> . IF tipos DOISPONTOS LPAREN statements RPAREN
    (86) for -> . FOR ID UNTIL comparacoes VIRG sinal NUM DOISPONTOS LPAREN statements RPAREN
    (87) while -> . WHILE tipos DOISPONTOS LPAREN statements RPAREN
    (45) conjuncao -> . els CONJUNCAO els
    (46) conjuncao -> . els CONJUNCAO aux
    (47) disjuncao -> . els DISJUNCAO els
    (48) disjuncao -> . els DISJUNCAO aux
    (29) term -> . factor
    (32) els -> . comparacoes
    (33) els -> . term
    (34) els -> . ID
    (35) els -> . BOOL
    (27) factor -> . NUM
    (28) factor -> . REAL

    ARRAY           shift and go to state 13
    DCLN            shift and go to state 16
    DCLS            shift and go to state 17
    PRINT           shift and go to state 21
    SCAN            shift and go to state 23
    RETURN          shift and go to state 24
    ID              shift and go to state 15
    NUM             shift and go to state 14
    IF              shift and go to state 27
    FOR             shift and go to state 28
    WHILE           shift and go to state 29
    BOOL            shift and go to state 32
    REAL            shift and go to state 33

    final                          shift and go to state 1
    reconhece                      shift and go to state 2
    tipos                          shift and go to state 3
    declara                        shift and go to state 4
    ciclos                         shift and go to state 5
    print                          shift and go to state 6
    scan                           shift and go to state 7
    devolve                        shift and go to state 8
    atribuicao                     shift and go to state 9
    aux                            shift and go to state 10
    expression                     shift and go to state 11
    comparacoes                    shift and go to state 12
    if                             shift and go to state 18
    for                            shift and go to state 19
    while                          shift and go to state 20
    term                           shift and go to state 22
    conjuncao                      shift and go to state 25
    disjuncao                      shift and go to state 26
    els                            shift and go to state 30
    factor                         shift and go to state 31

state 1

    (0) S' -> final .



state 2

    (1) final -> reconhece .

    $end            reduce using rule 1 (final -> reconhece .)


state 3

    (2) reconhece -> tipos .
    (9) reconhece -> tipos . reconhece
    (2) reconhece -> . tipos
    (3) reconhece -> . declara
    (4) reconhece -> . ciclos
    (5) reconhece -> . print
    (6) reconhece -> . scan
    (7) reconhece -> . devolve
    (8) reconhece -> . atribuicao
    (9) reconhece -> . tipos reconhece
    (10) reconhece -> . declara reconhece
    (11) reconhece -> . ciclos reconhece
    (12) reconhece -> . print reconhece
    (13) reconhece -> . scan reconhece
    (14) reconhece -> . atribuicao reconhece
    (66) tipos -> . aux
    (67) tipos -> . expression
    (68) tipos -> . comparacoes
    (69) tipos -> . print
    (70) tipos -> . devolve
    (71) tipos -> . scan
    (72) tipos -> . declara
    (40) declara -> . ARRAY PRE NUM PRD ID
    (41) declara -> . DCLN ID IGUAL expression
    (42) declara -> . DCLN ID
    (43) declara -> . DCLS ID
    (44) declara -> . DCLS ID IGUAL ASPAS ID ASPAS
    (88) ciclos -> . if
    (89) ciclos -> . for
    (90) ciclos -> . while
    (91) print -> . PRINT LPAREN ID RPAREN
    (92) print -> . PRINT LPAREN ASPAS ID ASPAS RPAREN
    (93) print -> . PRINT LPAREN ASPAS term ASPAS RPAREN
    (94) print -> . PRINT LPAREN ASPAS ID ASPAS VIRG expression RPAREN
    (95) print -> . PRINT LPAREN expression RPAREN
    (96) print -> . PRINT LPAREN VIRG RPAREN
    (97) scan -> . SCAN LPAREN ID RPAREN
    (98) devolve -> . RETURN LPAREN expression RPAREN
    (36) atribuicao -> . ID PRE NUM PRD IGUAL expression
    (37) atribuicao -> . ID PRE ID PRD IGUAL expression
    (38) atribuicao -> . ID IGUAL ID PRE ID PRD
    (39) atribuicao -> . ID IGUAL ID PRE NUM PRD
    (79) atribuicao -> . ID IGUAL expression
    (49) aux -> . conjuncao
    (50) aux -> . disjuncao
    (15) expression -> . expression MULTIPLICACAO term
    (16) expression -> . expression MULTIPLICACAO ID
    (17) expression -> . expression DIVISAO term
    (18) expression -> . expression DIVISAO ID
    (19) expression -> . expression SOMA ID
    (20) expression -> . expression SOMA term
    (21) expression -> . expression SUBTRACAO term
    (22) expression -> . expression SUBTRACAO ID
    (23) expression -> . NUM MOD NUM
    (24) expression -> . ID MOD NUM
    (25) expression -> . NUM MOD ID
    (26) expression -> . ID MOD ID
    (30) expression -> . term
    (31) expression -> . ID
    (51) comparacoes -> . expression IGUAL IGUAL expression
    (52) comparacoes -> . aux IGUAL IGUAL aux
    (53) comparacoes -> . aux MAIOR aux
    (54) comparacoes -> . aux MENOR aux
    (55) comparacoes -> . expression MAIOR expression
    (56) comparacoes -> . expression MENOR expression
    (57) comparacoes -> . term MAIOR term
    (58) comparacoes -> . term MENOR term
    (59) comparacoes -> . term IGUAL IGUAL term
    (60) comparacoes -> . aux MAIOR IGUAL aux
    (61) comparacoes -> . aux MENOR IGUAL aux
    (62) comparacoes -> . expression MAIOR IGUAL expression
    (63) comparacoes -> . expression MENOR IGUAL expression
    (64) comparacoes -> . term MAIOR IGUAL term
    (65) comparacoes -> . term MENOR IGUAL term
    (80) if -> . IF tipos DOISPONTOS LPAREN statements RPAREN ELSE LPAREN statements RPAREN
    (81) if -> . IF tipos DOISPONTOS LPAREN statements RPAREN
    (86) for -> . FOR ID UNTIL comparacoes VIRG sinal NUM DOISPONTOS LPAREN statements RPAREN
    (87) while -> . WHILE tipos DOISPONTOS LPAREN statements RPAREN
    (45) conjuncao -> . els CONJUNCAO els
    (46) conjuncao -> . els CONJUNCAO aux
    (47) disjuncao -> . els DISJUNCAO els
    (48) disjuncao -> . els DISJUNCAO aux
    (29) term -> . factor
    (32) els -> . comparacoes
    (33) els -> . term
    (34) els -> . ID
    (35) els -> . BOOL
    (27) factor -> . NUM
    (28) factor -> . REAL

    $end            reduce using rule 2 (reconhece -> tipos .)
    ARRAY           shift and go to state 13
    DCLN            shift and go to state 16
    DCLS            shift and go to state 17
    PRINT           shift and go to state 21
    SCAN            shift and go to state 23
    RETURN          shift and go to state 24
    ID              shift and go to state 15
    NUM             shift and go to state 14
    IF              shift and go to state 27
    FOR             shift and go to state 28
    WHILE           shift and go to state 29
    BOOL            shift and go to state 32
    REAL            shift and go to state 33

    tipos                          shift and go to state 3
    reconhece                      shift and go to state 34
    declara                        shift and go to state 4
    ciclos                         shift and go to state 5
    print                          shift and go to state 6
    scan                           shift and go to state 7
    devolve                        shift and go to state 8
    atribuicao                     shift and go to state 9
    aux                            shift and go to state 10
    expression                     shift and go to state 11
    comparacoes                    shift and go to state 12
    if                             shift and go to state 18
    for                            shift and go to state 19
    while                          shift and go to state 20
    term                           shift and go to state 22
    conjuncao                      shift and go to state 25
    disjuncao                      shift and go to state 26
    els                            shift and go to state 30
    factor                         shift and go to state 31

state 4

    (3) reconhece -> declara .
    (10) reconhece -> declara . reconhece
    (72) tipos -> declara .
    (2) reconhece -> . tipos
    (3) reconhece -> . declara
    (4) reconhece -> . ciclos
    (5) reconhece -> . print
    (6) reconhece -> . scan
    (7) reconhece -> . devolve
    (8) reconhece -> . atribuicao
    (9) reconhece -> . tipos reconhece
    (10) reconhece -> . declara reconhece
    (11) reconhece -> . ciclos reconhece
    (12) reconhece -> . print reconhece
    (13) reconhece -> . scan reconhece
    (14) reconhece -> . atribuicao reconhece
    (66) tipos -> . aux
    (67) tipos -> . expression
    (68) tipos -> . comparacoes
    (69) tipos -> . print
    (70) tipos -> . devolve
    (71) tipos -> . scan
    (72) tipos -> . declara
    (40) declara -> . ARRAY PRE NUM PRD ID
    (41) declara -> . DCLN ID IGUAL expression
    (42) declara -> . DCLN ID
    (43) declara -> . DCLS ID
    (44) declara -> . DCLS ID IGUAL ASPAS ID ASPAS
    (88) ciclos -> . if
    (89) ciclos -> . for
    (90) ciclos -> . while
    (91) print -> . PRINT LPAREN ID RPAREN
    (92) print -> . PRINT LPAREN ASPAS ID ASPAS RPAREN
    (93) print -> . PRINT LPAREN ASPAS term ASPAS RPAREN
    (94) print -> . PRINT LPAREN ASPAS ID ASPAS VIRG expression RPAREN
    (95) print -> . PRINT LPAREN expression RPAREN
    (96) print -> . PRINT LPAREN VIRG RPAREN
    (97) scan -> . SCAN LPAREN ID RPAREN
    (98) devolve -> . RETURN LPAREN expression RPAREN
    (36) atribuicao -> . ID PRE NUM PRD IGUAL expression
    (37) atribuicao -> . ID PRE ID PRD IGUAL expression
    (38) atribuicao -> . ID IGUAL ID PRE ID PRD
    (39) atribuicao -> . ID IGUAL ID PRE NUM PRD
    (79) atribuicao -> . ID IGUAL expression
    (49) aux -> . conjuncao
    (50) aux -> . disjuncao
    (15) expression -> . expression MULTIPLICACAO term
    (16) expression -> . expression MULTIPLICACAO ID
    (17) expression -> . expression DIVISAO term
    (18) expression -> . expression DIVISAO ID
    (19) expression -> . expression SOMA ID
    (20) expression -> . expression SOMA term
    (21) expression -> . expression SUBTRACAO term
    (22) expression -> . expression SUBTRACAO ID
    (23) expression -> . NUM MOD NUM
    (24) expression -> . ID MOD NUM
    (25) expression -> . NUM MOD ID
    (26) expression -> . ID MOD ID
    (30) expression -> . term
    (31) expression -> . ID
    (51) comparacoes -> . expression IGUAL IGUAL expression
    (52) comparacoes -> . aux IGUAL IGUAL aux
    (53) comparacoes -> . aux MAIOR aux
    (54) comparacoes -> . aux MENOR aux
    (55) comparacoes -> . expression MAIOR expression
    (56) comparacoes -> . expression MENOR expression
    (57) comparacoes -> . term MAIOR term
    (58) comparacoes -> . term MENOR term
    (59) comparacoes -> . term IGUAL IGUAL term
    (60) comparacoes -> . aux MAIOR IGUAL aux
    (61) comparacoes -> . aux MENOR IGUAL aux
    (62) comparacoes -> . expression MAIOR IGUAL expression
    (63) comparacoes -> . expression MENOR IGUAL expression
    (64) comparacoes -> . term MAIOR IGUAL term
    (65) comparacoes -> . term MENOR IGUAL term
    (80) if -> . IF tipos DOISPONTOS LPAREN statements RPAREN ELSE LPAREN statements RPAREN
    (81) if -> . IF tipos DOISPONTOS LPAREN statements RPAREN
    (86) for -> . FOR ID UNTIL comparacoes VIRG sinal NUM DOISPONTOS LPAREN statements RPAREN
    (87) while -> . WHILE tipos DOISPONTOS LPAREN statements RPAREN
    (45) conjuncao -> . els CONJUNCAO els
    (46) conjuncao -> . els CONJUNCAO aux
    (47) disjuncao -> . els DISJUNCAO els
    (48) disjuncao -> . els DISJUNCAO aux
    (29) term -> . factor
    (32) els -> . comparacoes
    (33) els -> . term
    (34) els -> . ID
    (35) els -> . BOOL
    (27) factor -> . NUM
    (28) factor -> . REAL

  ! reduce/reduce conflict for $end resolved using rule 3 (reconhece -> declara .)
  ! shift/reduce conflict for ARRAY resolved as shift
  ! shift/reduce conflict for DCLN resolved as shift
  ! shift/reduce conflict for DCLS resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for SCAN resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for REAL resolved as shift
    $end            reduce using rule 3 (reconhece -> declara .)
    ARRAY           shift and go to state 13
    DCLN            shift and go to state 16
    DCLS            shift and go to state 17
    PRINT           shift and go to state 21
    SCAN            shift and go to state 23
    RETURN          shift and go to state 24
    ID              shift and go to state 15
    NUM             shift and go to state 14
    IF              shift and go to state 27
    FOR             shift and go to state 28
    WHILE           shift and go to state 29
    BOOL            shift and go to state 32
    REAL            shift and go to state 33

  ! ARRAY           [ reduce using rule 72 (tipos -> declara .) ]
  ! DCLN            [ reduce using rule 72 (tipos -> declara .) ]
  ! DCLS            [ reduce using rule 72 (tipos -> declara .) ]
  ! PRINT           [ reduce using rule 72 (tipos -> declara .) ]
  ! SCAN            [ reduce using rule 72 (tipos -> declara .) ]
  ! RETURN          [ reduce using rule 72 (tipos -> declara .) ]
  ! ID              [ reduce using rule 72 (tipos -> declara .) ]
  ! NUM             [ reduce using rule 72 (tipos -> declara .) ]
  ! IF              [ reduce using rule 72 (tipos -> declara .) ]
  ! FOR             [ reduce using rule 72 (tipos -> declara .) ]
  ! WHILE           [ reduce using rule 72 (tipos -> declara .) ]
  ! BOOL            [ reduce using rule 72 (tipos -> declara .) ]
  ! REAL            [ reduce using rule 72 (tipos -> declara .) ]
  ! $end            [ reduce using rule 72 (tipos -> declara .) ]

    declara                        shift and go to state 4
    reconhece                      shift and go to state 35
    tipos                          shift and go to state 3
    ciclos                         shift and go to state 5
    print                          shift and go to state 6
    scan                           shift and go to state 7
    devolve                        shift and go to state 8
    atribuicao                     shift and go to state 9
    aux                            shift and go to state 10
    expression                     shift and go to state 11
    comparacoes                    shift and go to state 12
    if                             shift and go to state 18
    for                            shift and go to state 19
    while                          shift and go to state 20
    term                           shift and go to state 22
    conjuncao                      shift and go to state 25
    disjuncao                      shift and go to state 26
    els                            shift and go to state 30
    factor                         shift and go to state 31

state 5

    (4) reconhece -> ciclos .
    (11) reconhece -> ciclos . reconhece
    (2) reconhece -> . tipos
    (3) reconhece -> . declara
    (4) reconhece -> . ciclos
    (5) reconhece -> . print
    (6) reconhece -> . scan
    (7) reconhece -> . devolve
    (8) reconhece -> . atribuicao
    (9) reconhece -> . tipos reconhece
    (10) reconhece -> . declara reconhece
    (11) reconhece -> . ciclos reconhece
    (12) reconhece -> . print reconhece
    (13) reconhece -> . scan reconhece
    (14) reconhece -> . atribuicao reconhece
    (66) tipos -> . aux
    (67) tipos -> . expression
    (68) tipos -> . comparacoes
    (69) tipos -> . print
    (70) tipos -> . devolve
    (71) tipos -> . scan
    (72) tipos -> . declara
    (40) declara -> . ARRAY PRE NUM PRD ID
    (41) declara -> . DCLN ID IGUAL expression
    (42) declara -> . DCLN ID
    (43) declara -> . DCLS ID
    (44) declara -> . DCLS ID IGUAL ASPAS ID ASPAS
    (88) ciclos -> . if
    (89) ciclos -> . for
    (90) ciclos -> . while
    (91) print -> . PRINT LPAREN ID RPAREN
    (92) print -> . PRINT LPAREN ASPAS ID ASPAS RPAREN
    (93) print -> . PRINT LPAREN ASPAS term ASPAS RPAREN
    (94) print -> . PRINT LPAREN ASPAS ID ASPAS VIRG expression RPAREN
    (95) print -> . PRINT LPAREN expression RPAREN
    (96) print -> . PRINT LPAREN VIRG RPAREN
    (97) scan -> . SCAN LPAREN ID RPAREN
    (98) devolve -> . RETURN LPAREN expression RPAREN
    (36) atribuicao -> . ID PRE NUM PRD IGUAL expression
    (37) atribuicao -> . ID PRE ID PRD IGUAL expression
    (38) atribuicao -> . ID IGUAL ID PRE ID PRD
    (39) atribuicao -> . ID IGUAL ID PRE NUM PRD
    (79) atribuicao -> . ID IGUAL expression
    (49) aux -> . conjuncao
    (50) aux -> . disjuncao
    (15) expression -> . expression MULTIPLICACAO term
    (16) expression -> . expression MULTIPLICACAO ID
    (17) expression -> . expression DIVISAO term
    (18) expression -> . expression DIVISAO ID
    (19) expression -> . expression SOMA ID
    (20) expression -> . expression SOMA term
    (21) expression -> . expression SUBTRACAO term
    (22) expression -> . expression SUBTRACAO ID
    (23) expression -> . NUM MOD NUM
    (24) expression -> . ID MOD NUM
    (25) expression -> . NUM MOD ID
    (26) expression -> . ID MOD ID
    (30) expression -> . term
    (31) expression -> . ID
    (51) comparacoes -> . expression IGUAL IGUAL expression
    (52) comparacoes -> . aux IGUAL IGUAL aux
    (53) comparacoes -> . aux MAIOR aux
    (54) comparacoes -> . aux MENOR aux
    (55) comparacoes -> . expression MAIOR expression
    (56) comparacoes -> . expression MENOR expression
    (57) comparacoes -> . term MAIOR term
    (58) comparacoes -> . term MENOR term
    (59) comparacoes -> . term IGUAL IGUAL term
    (60) comparacoes -> . aux MAIOR IGUAL aux
    (61) comparacoes -> . aux MENOR IGUAL aux
    (62) comparacoes -> . expression MAIOR IGUAL expression
    (63) comparacoes -> . expression MENOR IGUAL expression
    (64) comparacoes -> . term MAIOR IGUAL term
    (65) comparacoes -> . term MENOR IGUAL term
    (80) if -> . IF tipos DOISPONTOS LPAREN statements RPAREN ELSE LPAREN statements RPAREN
    (81) if -> . IF tipos DOISPONTOS LPAREN statements RPAREN
    (86) for -> . FOR ID UNTIL comparacoes VIRG sinal NUM DOISPONTOS LPAREN statements RPAREN
    (87) while -> . WHILE tipos DOISPONTOS LPAREN statements RPAREN
    (45) conjuncao -> . els CONJUNCAO els
    (46) conjuncao -> . els CONJUNCAO aux
    (47) disjuncao -> . els DISJUNCAO els
    (48) disjuncao -> . els DISJUNCAO aux
    (29) term -> . factor
    (32) els -> . comparacoes
    (33) els -> . term
    (34) els -> . ID
    (35) els -> . BOOL
    (27) factor -> . NUM
    (28) factor -> . REAL

    $end            reduce using rule 4 (reconhece -> ciclos .)
    ARRAY           shift and go to state 13
    DCLN            shift and go to state 16
    DCLS            shift and go to state 17
    PRINT           shift and go to state 21
    SCAN            shift and go to state 23
    RETURN          shift and go to state 24
    ID              shift and go to state 15
    NUM             shift and go to state 14
    IF              shift and go to state 27
    FOR             shift and go to state 28
    WHILE           shift and go to state 29
    BOOL            shift and go to state 32
    REAL            shift and go to state 33

    ciclos                         shift and go to state 5
    reconhece                      shift and go to state 36
    tipos                          shift and go to state 3
    declara                        shift and go to state 4
    print                          shift and go to state 6
    scan                           shift and go to state 7
    devolve                        shift and go to state 8
    atribuicao                     shift and go to state 9
    aux                            shift and go to state 10
    expression                     shift and go to state 11
    comparacoes                    shift and go to state 12
    if                             shift and go to state 18
    for                            shift and go to state 19
    while                          shift and go to state 20
    term                           shift and go to state 22
    conjuncao                      shift and go to state 25
    disjuncao                      shift and go to state 26
    els                            shift and go to state 30
    factor                         shift and go to state 31

state 6

    (5) reconhece -> print .
    (12) reconhece -> print . reconhece
    (69) tipos -> print .
    (2) reconhece -> . tipos
    (3) reconhece -> . declara
    (4) reconhece -> . ciclos
    (5) reconhece -> . print
    (6) reconhece -> . scan
    (7) reconhece -> . devolve
    (8) reconhece -> . atribuicao
    (9) reconhece -> . tipos reconhece
    (10) reconhece -> . declara reconhece
    (11) reconhece -> . ciclos reconhece
    (12) reconhece -> . print reconhece
    (13) reconhece -> . scan reconhece
    (14) reconhece -> . atribuicao reconhece
    (66) tipos -> . aux
    (67) tipos -> . expression
    (68) tipos -> . comparacoes
    (69) tipos -> . print
    (70) tipos -> . devolve
    (71) tipos -> . scan
    (72) tipos -> . declara
    (40) declara -> . ARRAY PRE NUM PRD ID
    (41) declara -> . DCLN ID IGUAL expression
    (42) declara -> . DCLN ID
    (43) declara -> . DCLS ID
    (44) declara -> . DCLS ID IGUAL ASPAS ID ASPAS
    (88) ciclos -> . if
    (89) ciclos -> . for
    (90) ciclos -> . while
    (91) print -> . PRINT LPAREN ID RPAREN
    (92) print -> . PRINT LPAREN ASPAS ID ASPAS RPAREN
    (93) print -> . PRINT LPAREN ASPAS term ASPAS RPAREN
    (94) print -> . PRINT LPAREN ASPAS ID ASPAS VIRG expression RPAREN
    (95) print -> . PRINT LPAREN expression RPAREN
    (96) print -> . PRINT LPAREN VIRG RPAREN
    (97) scan -> . SCAN LPAREN ID RPAREN
    (98) devolve -> . RETURN LPAREN expression RPAREN
    (36) atribuicao -> . ID PRE NUM PRD IGUAL expression
    (37) atribuicao -> . ID PRE ID PRD IGUAL expression
    (38) atribuicao -> . ID IGUAL ID PRE ID PRD
    (39) atribuicao -> . ID IGUAL ID PRE NUM PRD
    (79) atribuicao -> . ID IGUAL expression
    (49) aux -> . conjuncao
    (50) aux -> . disjuncao
    (15) expression -> . expression MULTIPLICACAO term
    (16) expression -> . expression MULTIPLICACAO ID
    (17) expression -> . expression DIVISAO term
    (18) expression -> . expression DIVISAO ID
    (19) expression -> . expression SOMA ID
    (20) expression -> . expression SOMA term
    (21) expression -> . expression SUBTRACAO term
    (22) expression -> . expression SUBTRACAO ID
    (23) expression -> . NUM MOD NUM
    (24) expression -> . ID MOD NUM
    (25) expression -> . NUM MOD ID
    (26) expression -> . ID MOD ID
    (30) expression -> . term
    (31) expression -> . ID
    (51) comparacoes -> . expression IGUAL IGUAL expression
    (52) comparacoes -> . aux IGUAL IGUAL aux
    (53) comparacoes -> . aux MAIOR aux
    (54) comparacoes -> . aux MENOR aux
    (55) comparacoes -> . expression MAIOR expression
    (56) comparacoes -> . expression MENOR expression
    (57) comparacoes -> . term MAIOR term
